Änderung theme name

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Albertis
+Theme Name: asdu32
 Theme URI: 
 Description: Template für die Kunsthandlung Albertis.de
 Author: Tim Hartl
